# resume-scanner

./: .gitignore  Makefile  README.md  index.html  package-lock.json  package.json
backend/: README.md  main.py  pyproject.toml  requirements.txt
backend/src/: __init__.py
backend/src/adapters/: __init__.py  ai_analysis_adapter.py  analysis_repository.py  fastapi_app.py  file_parser_adapter.py  mock_resume_analysis_service.py  openai_analysis_adapter.py  resume_analysis_service.py
backend/src/adapters/api/: __init__.py  models.py  routes.py
backend/src/application/ports/: resume_analysis_port.py
backend/src/application/services/: resume_analysis_service.py
backend/src/domain/: __init__.py  analysis_criteria.py  resume.py  resume_analysis_service.py
backend/src/infrastructure/adapters/: ai_analysis_adapter.py  file_parser_adapter.py
backend/src/infrastructure/repositories/: analysis_repository.py
backend/src/infrastructure/web/: fastapi_app.py
backend/src/ports/: __init__.py  resume_analysis_port.py
backend/tests/: test_file_parser_adapter.py
frontend/: README.md  index.html  package-lock.json  package.json  performance-monitor.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Header.tsx  UploadSection.tsx
src/: App.tsx
src/components/: ResultsPanel.tsx
src/services/: AnalysisService.ts
